--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,12 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
+  background-color: #f8fafc;
 }
 
 .container {
   max-width: 1280px;
   margin: 0 auto;
-}
-
-.btn {
-  font-size: 18px;
-  border-radius: 50px;
-  padding: 8px 18px;
-  background-color: var(--primary-color);
-  color: #fff;
-  font-weight: 500;
 }
 
 .title {
