--- a/src/components/ProjectsSection/ProjectSection.css
+++ b/src/components/ProjectsSection/ProjectSection.css
@@ -7,3 +7,9 @@
 .project_title p {
     margin-top: 17px;
 }
+
+.project_cards {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
