--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -3,7 +3,7 @@
     align-items: center;
     gap: 50px;
     justify-content: center;
-    width: 900px;
+    width: 80%;
     margin: 0 auto;
     margin-top: 70px;
 }
