--- a/src/components/UI/Card/Card.css
+++ b/src/components/UI/Card/Card.css
@@ -26,3 +26,24 @@
 .project_text p {
     font-size: 14px;
 }
+
+.tags {
+    justify-content: center;
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.tag {
+    font-size: 12px;
+    font-weight: 600;
+    padding: 3px 7px;
+    border-radius: 50px;
+    border: 1px solid #999;
+}
+
+.project_links {
+    display: flex;
+    gap: 10px;
+    justify-content: start;
+}
