--- a/src/components/ContactSection/ContactSection.css
+++ b/src/components/ContactSection/ContactSection.css
@@ -2,6 +2,7 @@
     text-align: center;
     width: 60%;
     margin: 0 auto;
+    margin-bottom: 100px;
 }
 
 .contact_info {
@@ -10,6 +11,11 @@
     gap: 20px;
     width: 80%;
     margin: 0 auto;
+}
+
+.contact_form h1 {
+    font-size: 24px;
+    font-weight: 600;
 }
 
 .contact_title p {
